list files of build folder

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -58,6 +58,10 @@ jobs:
           release_name: ${{ steps.changelog.outputs.tag }}
           body: ${{ steps.changelog.outputs.clean_changelog }}
 
+      - name : list files
+        run: /
+          ls -lrta
+
       - name: Deploy
         run: |
           npm run deploy
