--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -39,7 +39,7 @@ jobs:
           npm ci
       - name: Build
         run: |
-          npm run build --prod
+          npm run build_prod
 
       - name: Conventional Changelog Action
         id: changelog
