--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=/graduation/"
+    "deploy": "ng deploy --base-href=/graduation/",
+    "build_prod": "ng build --prod"
   },
   "private": true,
   "dependencies": {
