--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -62,6 +62,9 @@ jobs:
         run: ls -lrta
 
       - name: Deploy
-        run: |
-          npm run deploy
-
+        if: success()
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.TOKEN_GITHUB_ACTION }}
+          publish_dir: dist/graduation
+          enable_jekyll: true
