--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -62,8 +62,6 @@ jobs:
         run: ls -lrta
 
       - name: Deploy
-        run: |
-          npm run deploy
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: npm run deploy
+
 
