--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=/graduation/",
-    "build:prod": "ng build --configuration production --base-href https://lysgraduation.github.io/graduation/"
-
+    "deploy": "ng deploy --base-href=/graduation/"
   },
   "private": true,
   "dependencies": {
